GridArea på header med bild

--- a/index.html
+++ b/index.html
@@ -10,7 +10,13 @@
 
 <body>
 
-    <header></header>
+    <header>
+        <section class="gridHeader">
+            <article class="headerBig">Button</article>
+            <article class="headerSmall">Learn More</article>
+            <article class="headerSmall">Join Today</article>
+        </section>
+    </header>
     <nav>
         <a class="navItem" href="#">Home</a>
         <a class="navItem" href="#">Our offer</a>
@@ -24,11 +30,11 @@
         </section>
         <section class="gridSection">
             <article class="gridItem">How it works</article>
-            <article class="gridItem">How it works</article>
-            <article class="gridItem">How it works</article>
-            <article class="gridItem">How it works</article>
-            <article class="gridItem">How it works</article>
-            <article class="gridItem">How it works</article>
+            <article class="gridItem"><span class="cornerNumber">01</span>How it works</article>
+            <article class="gridItem"><span class="cornerNumber">02</span>How it works</article>
+            <article class="gridItem"><span class="cornerNumber">03</span>How it works</article>
+            <article class="gridItem"><span class="cornerNumber">04</span>How it works</article>
+            <article class="gridItem"><span class="cornerNumber">05</span>How it works</article>
         </section>
     </main>
     <footer>
