--- a/index.html
+++ b/index.html
@@ -12,16 +12,32 @@
 
     <header>
         <section class="gridHeader">
-            <article class="headerBig">Button</article>
-            <article class="headerSmall">Learn More</article>
-            <article class="headerSmall">Join Today</article>
+            <article class="topLeft">
+                <span>We've got you Covered.</span>
+                <p>Together we keep each other safe at home or at work. By paying a tiny fee a day, you are fylly
+                    insured all day long. You get it all for as little as <span>$0.4 per pay.</span></p>
+            </article>
+            <article class="bottomLeft">
+                <a class="joinButton" href="#">Join now</a>
+
+            </article>
+            <article class="topRight">
+                <h6>What do we have to offer?</h6>
+                <span>Learn More</span>
+            </article>
+            <article class="bottomRight">
+                <h6>What are you waiting for?</h6>
+                <span>Join Today</span>
+            </article>
         </section>
     </header>
     <nav>
-        <a class="navItem" href="#">Home</a>
-        <a class="navItem" href="#">Our offer</a>
-        <a class="navItem" href="#">Why us</a>
-        <a class="navItem" href="#">Contact</a>
+        <section class="navContainer">
+            <a class="navItem" href="#">Home</a>
+            <a class="navItem" href="#">Our offer</a>
+            <a class="navItem" href="#">Why us</a>
+            <a class="navItem" href="#">Contact</a>
+        </section>
     </nav>
     <main>
         <section class="mainContent">
