First draft for mainContent complete and minor lower gridSection improvements

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     insured all day long. You get it all for as little as <span>$0.4 per pay.</span></p>
             </article>
             <article class="bottomLeft">
-                <a class="joinButton" href="#">Join now</a>
+                <a class="joinButton" href="#">JOIN NOW</a>
 
             </article>
             <article class="topRight">
@@ -41,16 +41,71 @@
     </nav>
     <main>
         <section class="mainContent">
-            <article class="personalSafety">Your personal safety</article>
-            <article class="aboutUs">About us</article>
+            <article class="personalSafety">
+                <div>
+                    <span>Your personal financial safety net online.</span>
+                    <a class="joinButton" href="#">JOIN NOW</a>
+                </div>
+                <div>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, repellat voluptate dolores
+                        alias
+                        iure animi delectus amet, sequi distinctio vitae reprehenderit deleniti molestiae laborum
+                        quasi
+                        ipsam aspernatur, aut dolore? Delectus.</p>
+                </div>
+            </article>
+            <article class="portraits">
+
+                <div>
+                    <div class="image_container child"></div>
+                    <div class="text_container">
+                        <h3>Children</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid sunt numquam temporibus
+                            voluptatem
+                            quisquam quos unde officiis error dolorem quibusdam.</p>
+                    </div>
+                </div>
+                <div>
+                    <div class="image_container adult"></div>
+                    <div class="text_container">
+
+                        <h3>Just right</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid sunt numquam temporibus
+                            voluptatem
+                            quisquam quos unde officiis error dolorem quibusdam.</p>
+                    </div>
+                </div>
+                <div>
+                    <div class="image_container old"></div>
+                    <div class="text_container">
+                        <h3>Old fart</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid sunt numquam temporibus
+                            voluptatem
+                            quisquam quos unde officiis error dolorem quibusdam.</p>
+                    </div>
+                </div>
+            </article>
+            <article class="aboutUs">
+                <h1>About us</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores voluptate rem nobis adipisci
+                    doloremque possimus optio enim, eum corporis odio laborum harum quam, eos amet deleniti assumenda
+                    sapiente, tempora aliquam perferendis minus ullam! Provident neque atque mollitia, numquam officiis
+                    ad.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores voluptate rem nobis adipisci
+                    doloremque possimus optio enim, eum corporis odio laborum harum quam, eos amet deleniti assumenda
+                    sapiente, tempora aliquam perferendis minus ullam! Provident neque atque mollitia, numquam officiis
+                    ad.</p>
+            </article>
         </section>
         <section class="gridSection">
             <article class="gridItem">How it works</article>
-            <article class="gridItem"><span class="cornerNumber">01</span>How it works</article>
-            <article class="gridItem"><span class="cornerNumber">02</span>How it works</article>
-            <article class="gridItem"><span class="cornerNumber">03</span>How it works</article>
-            <article class="gridItem"><span class="cornerNumber">04</span>How it works</article>
-            <article class="gridItem"><span class="cornerNumber">05</span>How it works</article>
+            <article class="gridItem"><span class="cornerNumber">01</span>Answer a few questions<br />about yourself
+            </article>
+            <article class="gridItem"><span class="cornerNumber">02</span>Choose a plan.<br />Get a quote</article>
+            <article class="gridItem"><span class="cornerNumber">03</span>Answer some questions about your medical
+                history.</article>
+            <article class="gridItem"><span class="cornerNumber">04</span>Wait 90 sec to get approved</article>
+            <article class="gridItem"><span class="cornerNumber">05</span>Done!</article>
         </section>
     </main>
     <footer>
