First draft of index complete

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-
+    <a name="top" style="display: hidden;"></a>
     <header>
         <section class="gridHeader">
             <article class="topLeft">
@@ -109,7 +109,12 @@
         </section>
     </main>
     <footer>
-        TAKE ME UP AGAIN
+        <div><a href="#top">
+
+                <span>^</span>
+                <span>TAKE ME UP AGAIN!</span>
+
+            </a></div>
     </footer>
 
 </body>
