--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <header>
         <section class="gridHeader">
             <article class="topLeft">
-                <span>We've got you Covered.</span>
-                <p>Together we keep each other safe at home or at work. By paying a tiny fee a day, you are fylly
+                <span>We´ve got you Covered.</span>
+                <p>Together we keep each other safe at home or at work. By paying a tiny fee a day, you are fully
                     insured all day long. You get it all for as little as <span>$0.4 per pay.</span></p>
             </article>
             <article class="bottomLeft">
