Added scalability to entire index.html

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <a class="navItem" href="#">Home</a>
             <a class="navItem" href="#">Our offer</a>
             <a class="navItem" href="#">Why us</a>
-            <a class="navItem" href="#">Contact</a>
+            <a class="navItem" href="contact.html">Contact</a>
         </section>
     </nav>
     <main>
@@ -50,7 +50,8 @@
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, repellat voluptate dolores
                         alias
                         iure animi delectus amet, sequi distinctio vitae reprehenderit deleniti molestiae laborum
-                        quasi
+                        quasi Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus doloribus ad amet
+                        Iure.
                         ipsam aspernatur, aut dolore? Delectus.</p>
                 </div>
             </article>
@@ -72,7 +73,8 @@
                         <h3>Just right</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid sunt numquam temporibus
                             voluptatem
-                            quisquam quos unde officiis error dolorem quibusdam.</p>
+                            quisquam Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi quibusdam voluptas
+                            expedita a exercitationem possimus. quos unde officiis error dolorem quibusdam.</p>
                     </div>
                 </div>
                 <div>
@@ -99,9 +101,9 @@
         </section>
         <section class="gridSection">
             <article class="gridItem">How it works</article>
-            <article class="gridItem"><span class="cornerNumber">01</span>Answer a few questions<br />about yourself
+            <article class="gridItem"><span class="cornerNumber">01</span>Answer a few questions about yourself
             </article>
-            <article class="gridItem"><span class="cornerNumber">02</span>Choose a plan.<br />Get a quote</article>
+            <article class="gridItem"><span class="cornerNumber">02</span>Choose a plan. Get a quote</article>
             <article class="gridItem"><span class="cornerNumber">03</span>Answer some questions about your medical
                 history.</article>
             <article class="gridItem"><span class="cornerNumber">04</span>Wait 90 sec to get approved</article>
