--- a/contact.html
+++ b/contact.html
@@ -8,8 +8,49 @@
     <title>Document</title>
 </head>
 
-<body>
+<body class="wrapper">
+    <header class="contact_Header">
+        <h1>Oh hello there!</h1>
+    </header>
+    <nav class="contact">
+        <section class="navContainer contact">
+            <a class="navItem" href="index.html">Home</a>
+            <a class="navItem" href="#">Our offer</a>
+            <a class="navItem" href="#">Why us</a>
+            <a class="navItem" href="contact.html">Contact</a>
+        </section>
+    </nav>
+    <main class="contact">
+        <article>
+            <h1>Whats on your mind?</h1>
+        </article>
+        <article class="formList">
+            <div>
+                <span>Your email</span>
+                <input />
+            </div>
+            <div>
+                <span>Your message</span>
+                <textarea name="message" id="messageArea" cols="30" rows="10"
+                    placeholder="Dear Insurance company..."></textarea>
+            </div>
+            <div class="buttonHolder">
+                <a class="joinButton" href="#">SEND MESSAGE</a>
+            </div>
+        </article>
 
+    </main>
+    <section class="mapHolder">
+        <article class="visitBox">
+            <ul>
+                <li>
+                    <h1>Come visit us!</h1>
+                </li>
+                <li>2219 Giffin Street</li>
+                <li>San Francisco</li>
+            </ul>
+        </article>
+    </section>
 </body>
 
 </html>
