First attempt at RWD on Header

--- a/index.html
+++ b/index.html
@@ -24,10 +24,20 @@
             <article class="topRight">
                 <h6>What do we have to offer?</h6>
                 <span>Learn More</span>
+                <div class="fadeInContainer">
+                    <h2>Mer information</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minima similique eos fuga quam harum
+                        nisi eum cum fugiat illo omnis.</p>
+                </div>
             </article>
             <article class="bottomRight">
                 <h6>What are you waiting for?</h6>
                 <span>Join Today</span>
+                <div class="slideInContainer">
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, cupiditate incidunt
+                        consequatur doloremque dicta quibusdam reprehenderit voluptatem debitis ratione odit officiis
+                        omnis corrupti! A tempora libero quod? Impedit, cum minus.</p>
+                </div>
             </article>
         </section>
     </header>
