RWD Header Complete

--- a/index.html
+++ b/index.html
@@ -13,26 +13,33 @@
     <header>
         <section class="gridHeader">
             <article class="topLeft">
-                <span>We´ve got you Covered.</span>
-                <p>Together we keep each other safe at home or at work. By paying a tiny fee a day, you are fully
-                    insured all day long. You get it all for as little as <span>$0.4 per pay.</span></p>
+                <div class="gridContentContainer">
+                    <span>We´ve got you Covered.</span>
+                    <p>Together we keep each other safe at home or at work. By paying a tiny fee a day, you are fully
+                        insured all day long. You get it all for as little as <span>$0.4 per pay.</span></p>
+                </div>
             </article>
             <article class="bottomLeft">
                 <a class="joinButton" href="#">JOIN NOW</a>
 
             </article>
             <article class="topRight">
-                <h6>What do we have to offer?</h6>
-                <span>Learn More</span>
+                <div>
+                    <h6>What do we have to offer?</h6>
+                    <span>Learn More</span>
+                </div>
                 <div class="fadeInContainer">
                     <h2>Mer information</h2>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minima similique eos fuga quam harum
-                        nisi eum cum fugiat illo omnis.</p>
+                        nisi eum cum fugiat illo omnis. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quam,
+                        vitae?</p>
                 </div>
             </article>
             <article class="bottomRight">
-                <h6>What are you waiting for?</h6>
-                <span>Join Today</span>
+                <div>
+                    <h6>What are you waiting for?</h6>
+                    <span>Join Today</span>
+                </div>
                 <div class="slideInContainer">
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, cupiditate incidunt
                         consequatur doloremque dicta quibusdam reprehenderit voluptatem debitis ratione odit officiis
