RWD Nav with Icons and new variable added for bg-color

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <link rel="stylesheet" href="index.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Insurance Sphere</title>
@@ -50,10 +51,22 @@
     </header>
     <nav>
         <section class="navContainer">
-            <a class="navItem" href="#">Home</a>
-            <a class="navItem" href="#">Our offer</a>
-            <a class="navItem" href="#">Why us</a>
-            <a class="navItem" href="contact.html">Contact</a>
+            <a class="navItem" href="#">
+                <span class="material-icons">house</span>
+                <span class="hiddenNavItem">Home</span>
+            </a>
+            <a class="navItem" href="#">
+                <span class="material-icons">card_travel</span>
+                <span class="hiddenNavItem">Our offer</span>
+            </a>
+            <a class="navItem" href="#">
+                <span class="material-icons">people</span>
+                <span class="hiddenNavItem">Why us</span>
+            </a>
+            <a class="navItem" href="contact.html">
+                <span class="material-icons">info</span>
+                <span class="hiddenNavItem">Contact</span>
+            </a>
         </section>
     </nav>
     <main>
