RWD Maincontent complete

--- a/index.html
+++ b/index.html
@@ -76,14 +76,19 @@
                     <span>Your personal financial safety net online.</span>
                     <a class="joinButton" href="#">JOIN NOW</a>
                 </div>
-                <div>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, repellat voluptate dolores
-                        alias
-                        iure animi delectus amet, sequi distinctio vitae reprehenderit deleniti molestiae laborum
-                        quasi Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus doloribus ad amet
-                        Iure.
-                        ipsam aspernatur, aut dolore? Delectus.</p>
-                </div>
+                <!-- <div class="hiddenBlockContent"> -->
+                <p class="hiddenBlockContent">Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, repellat
+                    voluptate dolores
+                    alias
+                    iure animi delectus amet, sequi distinctio vitae reprehenderit deleniti molestiae laborum
+                    quasi Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus doloribus ad amet
+                    Iure.
+                    ipsam aspernatur, aut dolore? Delectus. Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                    Eveniet nulla quidem animi ea quo atque quisquam veritatis voluptatibus sapiente praesentium
+                    deleniti ratione placeat quaerat a consequuntur facere, facilis sint quia aliquam aperiam iusto?
+                    Ratione accusantium, labore a quasi quisquam optio autem iure architecto molestiae libero laboriosam
+                    commodi voluptatum earum quidem?</p>
+                <!-- </div> -->
             </article>
             <article class="portraits">
 
