RWD Contact but iffy execution

--- a/contact.html
+++ b/contact.html
@@ -3,8 +3,9 @@
 
 <head>
     <link rel="stylesheet" href="index.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=0.5">
     <title>Document</title>
 </head>
 
@@ -14,10 +15,22 @@
     </header>
     <nav class="contact">
         <section class="navContainer contact">
-            <a class="navItem" href="index.html">Home</a>
-            <a class="navItem" href="#">Our offer</a>
-            <a class="navItem" href="#">Why us</a>
-            <a class="navItem" href="contact.html">Contact</a>
+            <a class="navItem" href="#">
+                <span class="material-icons">house</span>
+                <span class="hiddenNavItem">Home</span>
+            </a>
+            <a class="navItem" href="#">
+                <span class="material-icons">card_travel</span>
+                <span class="hiddenNavItem">Our offer</span>
+            </a>
+            <a class="navItem" href="#">
+                <span class="material-icons">people</span>
+                <span class="hiddenNavItem">Why us</span>
+            </a>
+            <a class="navItem" href="contact.html">
+                <span class="material-icons">info</span>
+                <span class="hiddenNavItem">Contact</span>
+            </a>
         </section>
     </nav>
     <main class="contact">
@@ -25,11 +38,11 @@
             <h1>Whats on your mind?</h1>
         </article>
         <article class="formList">
-            <div>
+            <div class="inputHolder">
                 <span>Your email</span>
                 <input />
             </div>
-            <div>
+            <div class="textAreaHolder">
                 <span>Your message</span>
                 <textarea name="message" id="messageArea" cols="30" rows="10"
                     placeholder="Dear Insurance company..."></textarea>
