--- a/index.html
+++ b/index.html
@@ -10,150 +10,163 @@
 </head>
 
 <body>
-    <a name="top" style="display: hidden;"></a>
-    <header>
-        <section class="gridHeader">
-            <article class="topLeft">
-                <div class="gridContentContainer">
-                    <span>We´ve got you Covered.</span>
-                    <p>Together we keep each other safe at home or at work. By paying a tiny fee a day, you are fully
-                        insured all day long. You get it all for as little as <span>$0.4 per pay.</span></p>
-                </div>
-            </article>
-            <article class="bottomLeft">
-                <a class="joinButton" href="#">JOIN NOW</a>
-
-            </article>
-            <article class="topRight">
-                <div>
-                    <h6>What do we have to offer?</h6>
-                    <span>Learn More</span>
-                </div>
-                <div class="fadeInContainer">
-                    <h2>Mer information</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minima similique eos fuga quam harum
-                        nisi eum cum fugiat illo omnis. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quam,
-                        vitae?</p>
-                </div>
-            </article>
-            <article class="bottomRight">
-                <div>
-                    <h6>What are you waiting for?</h6>
-                    <span>Join Today</span>
-                </div>
-                <div class="slideInContainer">
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, cupiditate incidunt
-                        consequatur doloremque dicta quibusdam reprehenderit voluptatem debitis ratione odit officiis
-                        omnis corrupti! A tempora libero quod? Impedit, cum minus.</p>
-                </div>
-            </article>
-        </section>
-    </header>
-    <nav>
-        <section class="navContainer">
-            <a class="navItem" href="#">
-                <span class="material-icons">house</span>
-                <span class="hiddenNavItem">Home</span>
-            </a>
-            <a class="navItem" href="#">
-                <span class="material-icons">card_travel</span>
-                <span class="hiddenNavItem">Our offer</span>
-            </a>
-            <a class="navItem" href="#">
-                <span class="material-icons">people</span>
-                <span class="hiddenNavItem">Why us</span>
-            </a>
-            <a class="navItem" href="contact.html">
-                <span class="material-icons">info</span>
-                <span class="hiddenNavItem">Contact</span>
-            </a>
-        </section>
-    </nav>
-    <main>
-        <section class="mainContent">
-            <article class="personalSafety">
-                <div>
-                    <span>Your personal financial safety net online.</span>
+    <div class="wrapper">
+        <a name="top" style="display: hidden;"></a>
+        <header>
+            <section class="gridHeader">
+                <article class="topLeft">
+                    <div class="gridContentContainer">
+                        <span>We´ve got you Covered.</span>
+                        <p>Together we keep each other safe at home or at work. By paying a tiny fee a day, you are
+                            fully
+                            insured all day long. You get it all for as little as <span>$0.4 per pay.</span></p>
+                    </div>
+                </article>
+                <article class="bottomLeft">
                     <a class="joinButton" href="#">JOIN NOW</a>
-                </div>
-                <!-- <div class="hiddenBlockContent"> -->
-                <p class="hiddenBlockContent">Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, repellat
-                    voluptate dolores
-                    alias
-                    iure animi delectus amet, sequi distinctio vitae reprehenderit deleniti molestiae laborum
-                    quasi Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus doloribus ad amet
-                    Iure.
-                    ipsam aspernatur, aut dolore? Delectus. Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                    Eveniet nulla quidem animi ea quo atque quisquam veritatis voluptatibus sapiente praesentium
-                    deleniti ratione placeat quaerat a consequuntur facere, facilis sint quia aliquam aperiam iusto?
-                    Ratione accusantium, labore a quasi quisquam optio autem iure architecto molestiae libero laboriosam
-                    commodi voluptatum earum quidem?</p>
-                <!-- </div> -->
-            </article>
-            <article class="portraits">
 
-                <div>
-                    <div class="image_container child"></div>
-                    <div class="text_container">
-                        <h3>Children</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid sunt numquam temporibus
-                            voluptatem
-                            quisquam quos unde officiis error dolorem quibusdam.</p>
+                </article>
+                <article class="topRight">
+                    <div>
+                        <h6>What do we have to offer?</h6>
+                        <span>Learn More</span>
                     </div>
-                </div>
-                <div>
-                    <div class="image_container adult"></div>
-                    <div class="text_container">
-
-                        <h3>Just right</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid sunt numquam temporibus
-                            voluptatem
-                            quisquam Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi quibusdam voluptas
-                            expedita a exercitationem possimus. quos unde officiis error dolorem quibusdam.</p>
+                    <div class="fadeInContainer">
+                        <h2>Mer information</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minima similique eos fuga quam
+                            harum
+                            nisi eum cum fugiat illo omnis. Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                            Quam,
+                            vitae?</p>
                     </div>
-                </div>
-                <div>
-                    <div class="image_container old"></div>
-                    <div class="text_container">
-                        <h3>Old fart</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid sunt numquam temporibus
-                            voluptatem
-                            quisquam quos unde officiis error dolorem quibusdam.</p>
+                </article>
+                <article class="bottomRight">
+                    <div>
+                        <h6>What are you waiting for?</h6>
+                        <span>Join Today</span>
                     </div>
-                </div>
-            </article>
-            <article class="aboutUs">
-                <h1>About us</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores voluptate rem nobis adipisci
-                    doloremque possimus optio enim, eum corporis odio laborum harum quam, eos amet deleniti assumenda
-                    sapiente, tempora aliquam perferendis minus ullam! Provident neque atque mollitia, numquam officiis
-                    ad.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores voluptate rem nobis adipisci
-                    doloremque possimus optio enim, eum corporis odio laborum harum quam, eos amet deleniti assumenda
-                    sapiente, tempora aliquam perferendis minus ullam! Provident neque atque mollitia, numquam officiis
-                    ad.</p>
-            </article>
-        </section>
-        <section class="gridSection">
-            <article class="gridItem">How it works</article>
-            <article class="gridItem"><span class="cornerNumber">01</span>Answer a few questions about yourself
-            </article>
-            <article class="gridItem"><span class="cornerNumber">02</span>Choose a plan. Get a quote</article>
-            <article class="gridItem"><span class="cornerNumber">03</span>Answer some questions about your medical
-                history.</article>
-            <article class="gridItem"><span class="cornerNumber">04</span>Wait 90 sec to get approved</article>
-            <article class="gridItem"><span class="cornerNumber">05</span>Done!</article>
-        </section>
-    </main>
-    <footer>
-        <div><a href="#top">
+                    <div class="slideInContainer">
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, cupiditate incidunt
+                            consequatur doloremque dicta quibusdam reprehenderit voluptatem debitis ratione odit
+                            officiis
+                            omnis corrupti! A tempora libero quod? Impedit, cum minus.</p>
+                    </div>
+                </article>
+            </section>
+        </header>
+        <nav>
+            <section class="navContainer">
+                <a class="navItem" href="#">
+                    <span class="material-icons">house</span>
+                    <span class="hiddenNavItem">Home</span>
+                </a>
+                <a class="navItem" href="#">
+                    <span class="material-icons">card_travel</span>
+                    <span class="hiddenNavItem">Our offer</span>
+                </a>
+                <a class="navItem" href="#">
+                    <span class="material-icons">people</span>
+                    <span class="hiddenNavItem">Why us</span>
+                </a>
+                <a class="navItem" href="contact.html">
+                    <span class="material-icons">info</span>
+                    <span class="hiddenNavItem">Contact</span>
+                </a>
+            </section>
+        </nav>
+        <main>
+            <section class="mainContent">
+                <article class="personalSafety">
+                    <div>
+                        <span>Your personal financial safety net online.</span>
+                        <a class="joinButton" href="#">JOIN NOW</a>
+                    </div>
+                    <!-- <div class="hiddenBlockContent"> -->
+                    <p class="hiddenBlockContent">Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum,
+                        repellat
+                        voluptate dolores
+                        alias
+                        iure animi delectus amet, sequi distinctio vitae reprehenderit deleniti molestiae laborum
+                        quasi Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus doloribus ad amet
+                        Iure.
+                        ipsam aspernatur, aut dolore? Delectus. Lorem ipsum dolor sit amet consectetur, adipisicing
+                        elit.
+                        Eveniet nulla quidem animi ea quo atque quisquam veritatis voluptatibus sapiente praesentium
+                        deleniti ratione placeat quaerat a consequuntur facere, facilis sint quia aliquam aperiam iusto?
+                        Ratione accusantium, labore a quasi quisquam optio autem iure architecto molestiae libero
+                        laboriosam
+                        commodi voluptatum earum quidem?</p>
+                    <!-- </div> -->
+                </article>
+                <article class="portraits">
 
-                <span>^</span>
-                <span>TAKE ME UP AGAIN!</span>
+                    <div>
+                        <div class="image_container child"></div>
+                        <div class="text_container">
+                            <h3>Children</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid sunt numquam temporibus
+                                voluptatem
+                                quisquam quos unde officiis error dolorem quibusdam.</p>
+                        </div>
+                    </div>
+                    <div>
+                        <div class="image_container adult"></div>
+                        <div class="text_container">
 
-            </a></div>
-    </footer>
+                            <h3>Just right</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid sunt numquam temporibus
+                                voluptatem
+                                quisquam Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi quibusdam
+                                voluptas
+                                expedita a exercitationem possimus. quos unde officiis error dolorem quibusdam.</p>
+                        </div>
+                    </div>
+                    <div>
+                        <div class="image_container old"></div>
+                        <div class="text_container">
+                            <h3>Old fart</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid sunt numquam temporibus
+                                voluptatem
+                                quisquam quos unde officiis error dolorem quibusdam.</p>
+                        </div>
+                    </div>
+                </article>
+                <article class="aboutUs">
+                    <h1>About us</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores voluptate rem nobis adipisci
+                        doloremque possimus optio enim, eum corporis odio laborum harum quam, eos amet deleniti
+                        assumenda
+                        sapiente, tempora aliquam perferendis minus ullam! Provident neque atque mollitia, numquam
+                        officiis
+                        ad.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores voluptate rem nobis adipisci
+                        doloremque possimus optio enim, eum corporis odio laborum harum quam, eos amet deleniti
+                        assumenda
+                        sapiente, tempora aliquam perferendis minus ullam! Provident neque atque mollitia, numquam
+                        officiis
+                        ad.</p>
+                </article>
+            </section>
+            <section class="gridSection">
+                <article class="gridItem">How it works</article>
+                <article class="gridItem"><span class="cornerNumber">01</span>Answer a few questions about yourself
+                </article>
+                <article class="gridItem"><span class="cornerNumber">02</span>Choose a plan. Get a quote</article>
+                <article class="gridItem"><span class="cornerNumber">03</span>Answer some questions about your medical
+                    history.</article>
+                <article class="gridItem"><span class="cornerNumber">04</span>Wait 90 sec to get approved</article>
+                <article class="gridItem"><span class="cornerNumber">05</span>Done!</article>
+            </section>
+        </main>
+        <footer>
+            <div><a href="#top">
 
+                    <span>^</span>
+                    <span>TAKE ME UP AGAIN!</span>
+
+                </a></div>
+        </footer>
+    </div>
 </body>
 
 </html>
