Structurally changed the contact.html specified some specific css for it

--- a/contact.html
+++ b/contact.html
@@ -9,13 +9,13 @@
     <title>Document</title>
 </head>
 
-<body class="wrapper">
-    <header class="contact_Header">
-        <h1>Oh hello there!</h1>
-    </header>
-    <nav class="contact">
-        <section class="navContainer contact">
-            <a class="navItem" href="#">
+<body>
+    <div class="contact_wrapper">
+        <header class="contact_Header">
+            <h1>Oh hello there!</h1>
+        </header>
+        <nav class="contact">
+            <a class="navItem" href="index.html">
                 <span class="material-icons">house</span>
                 <span class="hiddenNavItem">Home</span>
             </a>
@@ -27,43 +27,43 @@
                 <span class="material-icons">people</span>
                 <span class="hiddenNavItem">Why us</span>
             </a>
-            <a class="navItem" href="contact.html">
+            <a class="navItem" href="#">
                 <span class="material-icons">info</span>
                 <span class="hiddenNavItem">Contact</span>
             </a>
-        </section>
-    </nav>
-    <main class="contact">
-        <article>
-            <h1>Whats on your mind?</h1>
-        </article>
-        <article class="formList">
-            <div class="inputHolder">
-                <span>Your email</span>
-                <input />
-            </div>
-            <div class="textAreaHolder">
-                <span>Your message</span>
-                <textarea name="message" id="messageArea" cols="30" rows="10"
-                    placeholder="Dear Insurance company..."></textarea>
-            </div>
-            <div class="buttonHolder">
-                <a class="joinButton" href="#">SEND MESSAGE</a>
-            </div>
-        </article>
+        </nav>
+        <main class="contact">
+            <article>
+                <h1>Whats on your mind?</h1>
+            </article>
+            <article class="formList">
+                <div class="inputHolder">
+                    <span>Your email</span>
+                    <input />
+                </div>
+                <div class="textAreaHolder">
+                    <span>Your message</span>
+                    <textarea name="message" id="messageArea" cols="30" rows="10"
+                        placeholder="Dear Insurance company..."></textarea>
+                </div>
+                <div class="buttonHolder">
+                    <a class="joinButton" href="#">SEND MESSAGE</a>
+                </div>
+            </article>
 
-    </main>
-    <section class="mapHolder">
-        <article class="visitBox">
-            <ul>
-                <li>
-                    <h1>Come visit us!</h1>
-                </li>
-                <li>2219 Giffin Street</li>
-                <li>San Francisco</li>
-            </ul>
-        </article>
-    </section>
+        </main>
+        <section class="mapHolder">
+            <article class="visitBox">
+                <ul>
+                    <li>
+                        <h1>Come visit us!</h1>
+                    </li>
+                    <li>2219 Giffin Street</li>
+                    <li>San Francisco</li>
+                </ul>
+            </article>
+        </section>
+    </div>
 </body>
 
 </html>
