--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <div class="wrapper">
-        <a name="top" style="display: none;"></a>
+        <a name="top" style="display: hidden;"></a>
         <header>
 
             <article class="topLeft">
